Switch to equals operator for filters. Use facet stage so that total count can be returned in meta.